tests/macros/duplicate/auto_complete.stderr
error: duplicate option `auto_complete`
 --> $DIR/auto_complete.rs:4:9
  |
4 |         auto_complete: todo!()
  |         ^^^^^^^^^^^^^
