tests/macros/duplicate/auto_complete.rs
fn main() {
    discourse::questions![Input {
        auto_complete: todo!(),
        auto_complete: todo!()
    }];
}
